--- a/gb/21/8/23/n13181579.md
+++ b/gb/21/8/23/n13181579.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/inqxbl3990/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/inqxbl3990/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/inqxbl3990/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/inqxbl3990/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/inqxbl3990/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/inqxbl3990/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>传承赛德克织布文化 张凤英获人间国宝殊荣</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13181585-512956-600x400.jpg" />
 <h6>赛德克族“Gaya tminun传统织布”的重要传统工艺保存者张凤英，为学生作示范教学。（南投县政府提供）
 </h6>
 <hr>
-<p>【大纪元2021年08月23日讯】（大纪元记者林萌骞台湾南投报导）从小跟着外婆一起生活的张凤英，自幼受到外婆高超<ahref="https://github.com/inqxbl3990/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E6%8A%80%E8%89%BA.md#1">织布技艺</a>的耳濡目染，并下功夫边学边问，再加上自己的钻研创新，将<ahref="https://github.com/inqxbl3990/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>族的传统<ahref="https://github.com/inqxbl3990/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E6%8A%80%E8%89%BA.md#1">织布技艺</a>传承下去，因而获得人间国宝的殊荣。</p>
-<figure id="13181584" aria-describedby="caption-13181584" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13181584-512955-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/08/id13181584-512955-450x300.jpg" alt="赛德克族“Gaya tminun传统织布”的重要传统工艺保存者张凤英，为学生作示范教学。" width="450" b="300" /></a><figcaption id="caption-13181584" class="wp-caption-text"><ahref="https://github.com/inqxbl3990/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>族“Gaya tminun传统织布”的重要传统工艺保存者张凤英，为学生作示范教学。（南投县政府提供）</figcaption></figure>
+<p>【大纪元2021年08月23日讯】（大纪元记者林萌骞台湾南投报导）从小跟着外婆一起生活的张凤英，自幼受到外婆高超<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E6%8A%80%E8%89%BA.md#1">织布技艺</a>的耳濡目染，并下功夫边学边问，再加上自己的钻研创新，将<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>族的传统织布技艺传承下去，因而获得人间国宝的殊荣。</p>
+<figure id="13181584" aria-describedby="caption-13181584" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13181584-512955-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/08/id13181584-512955-450x300.jpg" alt="赛德克族“Gaya tminun传统织布”的重要传统工艺保存者张凤英，为学生作示范教学。" width="450" b="300" /></a><figcaption id="caption-13181584" class="wp-caption-text"><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>族“Gaya tminun传统织布”的重要传统工艺保存者张凤英，为学生作示范教学。（南投县政府提供）</figcaption></figure>
 <figure id="13181582" aria-describedby="caption-13181582" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13181582-512954-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/08/id13181582-512954-450x300.jpg" alt="赛德克族“Gaya tminun传统织布”的重要传统工艺保存者张凤英（左）和先生曹立法（右）合影。" width="450" b="300" /></a><figcaption id="caption-13181582" class="wp-caption-text">赛德克族“Gaya tminun传统织布”的重要传统工艺保存者张凤英（左）和先生曹立法（右）合影。（南投县政府提供）</figcaption></figure>
 <figure id="13181581" aria-describedby="caption-13181581" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/08/id13181581-512953-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2021/08/id13181581-512953-450x300.jpg" alt="赛德克族“Gaya tminun传统织布”的重要传统工艺保存者张凤英和学生合影。" width="450" b="300" /></a><figcaption id="caption-13181581" class="wp-caption-text">赛德克族“Gaya tminun传统织布”的重要传统工艺保存者张凤英和学生合影。（南投县政府提供）</figcaption></figure>
 <p>来自仁爱乡中原部落的张凤英，是文化部今年公布的无形文化资产保存者（俗称人间国宝），获认证为赛德克族“Gaya tminun传统织布”的重要传统工艺保存者。</p>
-<p>张凤英对于获得人间国宝的认定，感到荣幸也觉得责任重大，她希望透过传习课程教学、影像、书本等纪录，能将这些珍贵的族人传统织布技艺永远保存并传承下去。</p>
+<p>张凤英对于获得人间国宝的认定，感到荣幸也觉得责任重大，她希望透过传习课程教学、影像、书本等纪录，能将这些珍贵的族人传统<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E6%8A%80%E8%89%BA.md#1">织布技艺</a>永远保存并传承下去。</p>
 <p>张凤英说，织布是她思念外婆的方式，因从小跟外公外婆住，每天跟着外婆张玉英生活，对于传统织布技艺可说是耳濡目染，尤其外婆也是精通赛德克族织布技艺的高手，在部落里小有名气。</p>
 <p>但是，老一辈的技艺工法都是存在脑袋里，用口传方式教学，所以她都是边学边问，边用图形或文字记录下来，再慢慢自己钻研进而创新。</p>
 <p>她也谈到，赛德克族特有的织布技法“经挑技法”最大特色，是织出来的布很有立体感且有层次，运用经线包着纬线织，可以织出菱形、豆纹、山形等纹路，每个图案都是富含原住民族群文化意义和信仰内涵。</p>
@@ -29,47 +29,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/1/28/n12716404.md#1">“台湾的国家道歉与回复原住民族权利”线上讲座</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/3/26/n12837617.md#1">欢庆儿童节 奥万大连续假期儿童免费</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/4/6/n12861301.md#1">结合部落人文历史 奥万大办3场赏萤小旅行</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/4/26/n12906497.md#1">浪漫织缘  赛德克与排湾族的编织对话</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/5/21/n12965757.md#1">融入部落文化 赛德克文化馆获建筑园冶奖</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/7/4/n13066274.md#1">原民音乐“原韵新声”跨域学程邀您参加</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/8/6/n13143142.md#1">来自部落的正义使者 守护治安传播爱心</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/8/23/n13181161.md#1">路见不平 县长斥资三千万改善路面及淹水问题</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/8/23/n13181165.md#1">透过影像纪录 传承地方特色文化</a></li>
-<li><a href="https://github.com/inqxbl3990/djy/blob/master/gb/21/8/23/n13181169.md#1">员林市玉意宫捐赠白米 传爱关怀荣民眷</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/1/28/n12716404.md#1">“台湾的国家道歉与回复原住民族权利”线上讲座</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/3/26/n12837617.md#1">欢庆儿童节 奥万大连续假期儿童免费</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/4/6/n12861301.md#1">结合部落人文历史 奥万大办3场赏萤小旅行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/4/26/n12906497.md#1">浪漫织缘  赛德克与排湾族的编织对话</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/5/21/n12965757.md#1">融入部落文化 赛德克文化馆获建筑园冶奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/4/n13066274.md#1">原民音乐“原韵新声”跨域学程邀您参加</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/8/6/n13143142.md#1">来自部落的正义使者 守护治安传播爱心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688297.md#1">彰化马兴国小“AI积木教室”启用 儿童寓教于乐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688293.md#1">万兴国中食农教育 明道大学飨以南洋口味</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685583.md#1">台日动漫大赛各领风骚 大叶大学、大明高中联展</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">嫁到韩国的中国媳妇：守住善就能走出困境</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/17/n13169214.md#1">【未解之谜】被神选中的大师们</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/7/23/n13108843.md#1">【命理】一个人做了坏事欠债可以不还吗？</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/15/n13163984.md#1">【馨香雅句】你喜欢的颜色吸引哪种能量</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/7/24/n13112860.md#1">她从婴儿的哭声中 听到了家族灭亡的命运</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/13/n13161080.md#1">【未解之谜】我的前世  是安妮?弗兰克</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/21/n13178649.md#1">【横河观点】美发病毒报告前 亚裔组织代中共施压？</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/21/n13178623.md#1">【财商天下】共同富裕 “合法”抢劫</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/21/n13178150.md#1">【珍言真语】惊险离港后留美 张崑阳：继续抗争</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/20/n13175453.md#1">15种“最干净蔬果” 第一名你经常吃</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/21/n13178319.md#1">杭州市委书记周江勇落马 曾力挺马云</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/21/n13177149.md#1">周田：美军印太司令部有多大？</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/20/n13176794.md#1">自曝践行断食法十多年 古天乐每日只吃一餐</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/20/n13175770.md#1">《斯卡罗》演员查马克病逝 长子获奖献亡父</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/20/n13176911.md#1">赴大陆工作突挂急诊 杨丞琳晒病房照自嘲</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/22/n13179064.md#1">好莱坞女星开IG账号 公开阿富汗少女求救信</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/18/n13170824.md#1">2021金曲奖完整得奖名单 华语歌后田馥甄胜出</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/20/n13175453.md#1">15种“最干净蔬果” 第一名你经常吃</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/20/n13175719.md#1">日本食品业禁止员工早餐吃纳豆 原因曝光</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/20/n13176265.md#1">芝士蛋糕块口感顺滑 制作简单 便于携带</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/21/n13177668.md#1">《斯卡罗》查马克淋巴癌病逝 有这种肿块快就医</a></li>
-<li><a href="https://github.com/tjuayn320/djy/blob/master/gb/21/8/21/n13178015.md#1">【重播】CDC重要报告 疫苗1大隐忧已现？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/inqxbl3990/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/inqxbl3990/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/23/n13181579.htm">传承赛德克织布文化 张凤英获人间国宝殊荣</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/23/n13181579.htm">传承赛德克织布文化 张凤英获人间国宝殊荣</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/inqxbl3990/djy/blob/master/gb/21/8/23/n13181579.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/inqxbl3990/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/inqxbl3990/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/inqxbl3990/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/inqxbl3990/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/inqxbl3990/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/8/23/n13181579.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
